--- a/src/components/App/style.css
+++ b/src/components/App/style.css
@@ -36,3 +36,26 @@
   font-size: 20px;
   text-align: center;
 }
+
+ul {
+  list-style-type: none;
+  text-align: center;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  text-align: center;
+  padding: 16px;
+  text-decoration: none;
+}
+
+li.selected-keyword {
+  background-color: lightblue;
+}
